--- a/index.html
+++ b/index.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
-  <html lang="">
-    <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Newton's Cradle</title>
-      <style> body {padding: 0; margin: 0;} </style>
-      <script src="matter.js"></script>
-      <script src="p5.js"></script>
-      <script src="p5.play.js"></script>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Corrida de Carros</title>
+    <!-- Lib -->
+    <script src="./lib/p5.min.js"></script>
+    <script src="./lib/p5.dom.min.js"></script>
+    <script src="./lib/p5.sound.min.js"></script>
+    <script src="./lib/p5.play.js"></script>
 
-      <script src="sketch.js"></script>
-      
-      <script src="bob.js"></script>
-      <script src="roof.js"></script>
-      <script src="rope.js"></script>
-      
-    </head>
-    <body>
-    </body>
-  </html>
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- Firebase -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyAYxDdUmJKWXnp-hYc6rg-NSY-8C__jQUg",
+  authDomain: "aula37-31b33.firebaseapp.com",
+  databaseURL: "https://aula37-31b33-default-rtdb.firebaseio.com",
+  projectId: "aula37-31b33",
+  storageBucket: "aula37-31b33.appspot.com",
+  messagingSenderId: "317055854384",
+  appId: "1:317055854384:web:871aca8730c319c33e8af5"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
+  </head>
+  <body>
+    <script src="./js/Game.js"></script>
+    <script src="./js/Form.js"></script>
+    <script src="./js/Player.js"></script>
+    <script src="./sketch.js"></script>
+  </body>
+</html>
